<resources>
    <string name="app_name">PW Wallet</string>

    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>

    <string name="history">History</string>
    <string name="users">Users</string>

    <string name="balance">%s PW.</string>

    <!-- transaction dialog -->
    <string name="dialog_transaction_title">New transaction</string>
    <string name="dialog_transaction_recipient_name">Recipient name</string>
    <string name="dialog_transaction_amount">Amount</string>
    <string name="dialog_transaction_current_balance">Current balance</string>
    <string name="dialog_transaction_account_username">Username</string>

    <string name="you_want_copy_transaction">Do you want to copy transaction?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- errors -->
    <string name="cant_be_empty">Cant be empty</string>
    <string name="error">Error: %s</string>
    <string name="password_do_not_match">Your password and confirmation password do not match</string>

    <string name="too_much">Cant transfer more than you have on your balance.</string>

</resources>
