<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id = "@+id/username_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/top_margin"/>

    <EditText
        android:id = "@+id/email_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id = "@+id/password_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id = "@+id/reenter_password_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password" />

    <Button
        android:id="@+id/registration_action"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:text="@string/registration"/>

</LinearLayout>
