<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id = "@+id/email_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/top_margin"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id = "@+id/password_login"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/login_row_width"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

</LinearLayout>
